--- a/.github/workflows/nt_vps_develop.yaml
+++ b/.github/workflows/nt_vps_develop.yaml
@@ -184,6 +184,25 @@ jobs:
               echo "PHP MySQL extension already installed."
           fi
 
+          # Path to nginx config inside your repo
+          REPO_NGINX_CONF=~/novatix/app/develop/nginx.conf
+          NGINX_CONF_PATH=/etc/nginx/sites-available/novatix
+          NGINX_ENABLED_PATH=/etc/nginx/sites-enabled/novatix
+
+          if [ ! -f "$NGINX_CONF_PATH" ]; then
+              echo "Nginx config not found in sites-available, copying from repo..."
+              sudo cp "$REPO_NGINX_CONF" "$NGINX_CONF_PATH"
+              echo "Creating symlink in sites-enabled..."
+              sudo ln -sf "$NGINX_CONF_PATH" "$NGINX_ENABLED_PATH"
+              echo "Testing nginx config..."
+              sudo nginx -t
+              echo "Reloading nginx service..."
+              sudo systemctl reload nginx
+          else
+              echo "Nginx config already exists at $NGINX_CONF_PATH, skipping..."
+          fi
+
+
           echo "Fixing Laravel directory permissions..."
           mkdir -p storage/framework/{cache,sessions,views}
           mkdir -p storage/logs bootstrap/cache
