--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -28,10 +28,11 @@ jobs:
           echo "Ensuring folder structure..."
           mkdir -p ~/novatix/app/production
 
-          # Ensure update_repo_prod.sh exists
           echo "Creating update_repo_prod.sh..."
           cat > ~/novatix/setups/update_repo_prod.sh << 'EOT'
           #!/bin/bash
+          set -e
+
           mkdir -p ~/novatix/app/production
           cd ~/novatix
 
@@ -46,17 +47,13 @@ jobs:
           else
               echo "Repository found. Pulling latest changes..."
               cd app/production
-
-              git config --global --add safe.directory $(pwd)  # ✅ fix dubious ownership
-
+              git config --global --add safe.directory $(pwd)
               git reset --hard HEAD
               git clean -fd
               git pull origin main --force
           fi
-
           EOT
           chmod +x ~/novatix/setups/update_repo_prod.sh
-
           EOF
 
       - name: Update Repository on VPS
@@ -86,42 +83,33 @@ jobs:
       - name: Deploy Laravel Project to VPS
         run: |
           ssh -i ~/.ssh/av_rsa -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} 'bash -s' << 'EOF'
-          set -e
+          set -euxo pipefail
 
-          # Ensure project directory exists
           mkdir -p ~/novatix/app/production
 
-          # Change ownership ONLY of production app folder
-          sudo chown -R www-data:www-data ~/novatix/app/production
-
-          # Recreate symlink in /var/www to point to production folder
+          # Recreate symlink to production folder
           SYMLINK_TARGET=$(realpath ~/novatix/app/production)
           sudo rm -rf /var/www/novatix
           sudo ln -sfn "$SYMLINK_TARGET" /var/www/novatix
 
-          # Fix ownership of symlink target folder (optional, but good)
-          sudo chown -R www-data:www-data "$SYMLINK_TARGET"
-
           cd /var/www/novatix
 
-          # Prepare Laravel folders with correct permissions
-          mkdir -p bootstrap/cache storage/framework/cache storage/framework/sessions storage/framework/views storage/logs
+          # Prepare Laravel folders
+          mkdir -p bootstrap/cache \
+                   storage/framework/{cache,sessions,views} \
+                   storage/logs
 
-          sudo chown -R www-data:www-data bootstrap/cache storage
-          sudo chmod -R 775 bootstrap/cache storage
-          sudo chmod g+s bootstrap/cache storage
+          # Fix only necessary permissions
+          sudo chown -R :www-data storage bootstrap/cache
+          sudo chmod -R 775 storage bootstrap/cache
+          sudo chmod g+s storage bootstrap/cache
 
-          # Run composer, npm, artisan commands AS www-data
-          sudo -u www-data composer install --no-interaction --prefer-dist --optimize-autoloader
-          sudo -u www-data npm install
-          sudo -u www-data npm run build
-          sudo -u www-data php artisan migrate
-          sudo -u www-data php artisan storage:link
+          # Laravel deployment steps
+          composer install --no-interaction --prefer-dist --optimize-autoloader
+          npm install
+          npm run build
 
-          # Final ownership fix (just in case)
-          sudo chown -R www-data:www-data bootstrap/cache storage
-          sudo chmod -R 775 bootstrap/cache storage
-          sudo chmod g+s bootstrap/cache storage
+          php artisan migrate --force
+          php artisan storage:link
 
           EOF
-
