--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -99,11 +99,12 @@ jobs:
           composer install --no-interaction --prefer-dist --optimize-autoloader
           npm install
           npm run build
+          php artisan migrate --force
+          php artisan storage:link
+
           php artisan config:clear
           php artisan config:cache
           php artisan route:cache
           php artisan view:cache
-          php artisan migrate
-          php artisan storage:link
 
           EOF
