--- a/.github/workflows/nt_vps_production.yaml
+++ b/.github/workflows/nt_vps_production.yaml
@@ -114,7 +114,7 @@ jobs:
 
           # Set proper ownership and permissions
           sudo chown -R $USER:www-data storage bootstrap/cache
-          chmod -R 775 storage bootstrap/cache
+          sudo chmod -R 775 storage bootstrap/cache
 
           # Set ownership for the symlink
           sudo chown -R www-data:www-data "$SYMLINK_PATH"
@@ -133,7 +133,7 @@ jobs:
 
           # Final permission fix
           sudo chown -R www-data:www-data storage bootstrap/cache
-          chmod -R 775 storage bootstrap/cache
+          sudo chmod -R 775 storage bootstrap/cache
 
           EOF
 
